--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
 # C extensions
 *.so
 
@@ -20,6 +21,7 @@ parts/
 sdist/
 var/
 wheels/
+.DS_Store
 share/python-wheels/
 *.egg-info/
 .installed.cfg
